--- a/requirements.txt
+++ b/requirements.txt
@@ -8,14 +8,19 @@ colorama==0.4.3
 contextlib2==0.6.0
 distlib==0.3.0
 distro==1.4.0
+fasttext==0.9.2
 html5lib==1.0.1
 idna==2.8
 ipaddr==2.2.0
 lockfile==0.12.2
 msgpack==0.6.2
+mypy==0.790
+mypy-extensions==0.4.3
+numpy==1.19.2
 packaging==20.3
 pep517==0.8.2
 progress==1.5
+pybind11==2.5.0
 pycparser==2.20
 pyparsing==2.4.6
 pytoml==0.1.21
@@ -26,5 +31,7 @@ six==1.14.0
 soupsieve==2.0.1
 SQLAlchemy==1.3.19
 tokenizer==2.3.1
+typed-ast==1.4.1
+typing-extensions==3.7.4.3
 urllib3==1.25.8
 webencodings==0.5.1
